--- a/views/ezform/index.html
+++ b/views/ezform/index.html
@@ -1,11 +1,16 @@
 <div id="top">
+
+<div id="top">
+  <button class="btn btn-primary btn-lg" id="btnSync"><i class="fa fa-refresh"></i>
+ Sync</button>
+</div><br>  
 <div id="error-message"></div>
 <div class="row">
   <div class="col-lg-12">
     <div class="input-group">
       <input type="text" class="form-control" id="ezf_id" placeholder="กรุณากรอกรหัส ezform" value="1500628215069381400">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button" id="btn-ezform-creatn">สร้าง</button>
+        <button class="btn btn-warning" type="button" id="btn-ezform-creatn">สร้าง</button>
       </span>
     </div> 
   </div><!-- /.col-lg-6 -->
@@ -44,6 +49,13 @@
      });//1500628215069381400
     $("#save-submit").click(()=>{
        ezform.save('.frm-ezforms');
+    });
+
+    //Sync
+    $("#btnSync").click(()=>{
+   
+      $("#btnSync i").addClass("fa-spin fa-fw");
+
     });
     
 </script>
